--- a/BloodDonor/view/controller/HSAddressPicker.xib
+++ b/BloodDonor/view/controller/HSAddressPicker.xib
@@ -14,6 +14,7 @@
 			<string>IBProxyObject</string>
 			<string>IBUIButton</string>
 			<string>IBUIImageView</string>
+			<string>IBUILabel</string>
 			<string>IBUITextField</string>
 			<string>IBUIView</string>
 		</array>
@@ -60,6 +61,10 @@
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="392692060"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
+						<object class="NSColor" key="IBUIBackgroundColor">
+							<int key="NSColorSpace">1</int>
+							<bytes key="NSRGB">MC42NTUzMTMyOTcyIDAuNDExMTgzMTA2OSAwAA</bytes>
+						</object>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<object class="NSCustomResource" key="IBUIImage">
@@ -115,7 +120,7 @@
 						<string key="NSFrame">{{9, 192}, {84, 36}}</string>
 						<reference key="NSSuperview" ref="437604028"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="952799636"/>
+						<reference key="NSNextKeyView" ref="15295990"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -137,21 +142,6 @@
 						</object>
 						<reference key="IBUIFontDescription" ref="1060383236"/>
 						<reference key="IBUIFont" ref="95885800"/>
-					</object>
-					<object class="IBUIImageView" id="952799636">
-						<reference key="NSNextResponder" ref="437604028"/>
-						<int key="NSvFlags">266</int>
-						<string key="NSFrame">{{111, 201}, {99, 15}}</string>
-						<reference key="NSSuperview" ref="437604028"/>
-						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="15295990"/>
-						<string key="NSReuseIdentifierKey">_NS:9</string>
-						<bool key="IBUIUserInteractionEnabled">NO</bool>
-						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-						<object class="NSCustomResource" key="IBUIImage">
-							<string key="NSClassName">NSImage</string>
-							<string key="NSResourceName">eventPlanningDateLabel.png</string>
-						</object>
 					</object>
 					<object class="IBUITextField" id="1034717820">
 						<reference key="NSNextResponder" ref="437604028"/>
@@ -193,6 +183,37 @@
 							<double key="NSSize">14</double>
 							<int key="NSfFlags">16</int>
 						</object>
+					</object>
+					<object class="IBUILabel" id="967532421">
+						<reference key="NSNextResponder" ref="437604028"/>
+						<int key="NSvFlags">292</int>
+						<string key="NSFrame">{{101, 198}, {119, 21}}</string>
+						<reference key="NSSuperview" ref="437604028"/>
+						<reference key="NSWindow"/>
+						<string key="NSReuseIdentifierKey">_NS:9</string>
+						<bool key="IBUIOpaque">NO</bool>
+						<bool key="IBUIClipsSubviews">YES</bool>
+						<int key="IBUIContentMode">7</int>
+						<bool key="IBUIUserInteractionEnabled">NO</bool>
+						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+						<string key="IBUIText">Адрес</string>
+						<object class="NSColor" key="IBUITextColor">
+							<int key="NSColorSpace">1</int>
+							<bytes key="NSRGB">MC41OTE2OTcyMjU4IDAuMzcyNTk1MDE2MyAwLjAwNjY4NTE5MDY3NAA</bytes>
+						</object>
+						<nil key="IBUIHighlightedColor"/>
+						<int key="IBUIBaselineAdjustment">0</int>
+						<int key="IBUITextAlignment">1</int>
+						<object class="IBUIFontDescription" key="IBUIFontDescription">
+							<int key="type">2</int>
+							<double key="pointSize">19</double>
+						</object>
+						<object class="NSFont" key="IBUIFont">
+							<string key="NSName">Helvetica-Bold</string>
+							<double key="NSSize">19</double>
+							<int key="NSfFlags">16</int>
+						</object>
+						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 					</object>
 				</array>
 				<string key="NSFrameSize">{320, 480}</string>
@@ -280,7 +301,7 @@
 							<reference ref="638690667"/>
 							<reference ref="15295990"/>
 							<reference ref="392692060"/>
-							<reference ref="952799636"/>
+							<reference ref="967532421"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -305,13 +326,13 @@
 						<reference key="parent" ref="437604028"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">10</int>
-						<reference key="object" ref="952799636"/>
+						<int key="objectID">11</int>
+						<reference key="object" ref="1034717820"/>
 						<reference key="parent" ref="437604028"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">11</int>
-						<reference key="object" ref="1034717820"/>
+						<int key="objectID">18</int>
+						<reference key="object" ref="967532421"/>
 						<reference key="parent" ref="437604028"/>
 					</object>
 				</array>
@@ -321,8 +342,8 @@
 				<string key="-1.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="-2.CustomClassName">UIResponder</string>
 				<string key="-2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="10.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="11.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="18.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="4.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="6.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="7.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -336,7 +357,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">17</int>
+			<int key="maxID">18</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -384,7 +405,6 @@
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
 		<dictionary class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
-			<string key="eventPlanningDateLabel.png">{99, 15}</string>
 			<string key="modalViewShadow.png">{320, 135}</string>
 			<string key="yellowBar.png">{320, 51}</string>
 			<string key="yellowCancelButtonNormal.png">{84, 36}</string>
