--- a/BloodDonor/view/controller/HSAddressPicker.xib
+++ b/BloodDonor/view/controller/HSAddressPicker.xib
@@ -43,7 +43,6 @@
 						<int key="NSvFlags">266</int>
 						<string key="NSFrame">{{0, 49}, {320, 135}}</string>
 						<reference key="NSSuperview" ref="437604028"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="638690667"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -58,7 +57,6 @@
 						<int key="NSvFlags">266</int>
 						<string key="NSFrame">{{0, 184}, {320, 51}}</string>
 						<reference key="NSSuperview" ref="437604028"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="392692060"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
@@ -77,7 +75,6 @@
 						<int key="NSvFlags">297</int>
 						<string key="NSFrame">{{228, 192}, {84, 36}}</string>
 						<reference key="NSSuperview" ref="437604028"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="1034717820"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -119,7 +116,6 @@
 						<int key="NSvFlags">300</int>
 						<string key="NSFrame">{{9, 192}, {84, 36}}</string>
 						<reference key="NSSuperview" ref="437604028"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="15295990"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
@@ -148,7 +144,6 @@
 						<int key="NSvFlags">298</int>
 						<string key="NSFrame">{{0, 235}, {320, 30}}</string>
 						<reference key="NSSuperview" ref="437604028"/>
-						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">1</int>
@@ -189,7 +184,6 @@
 						<int key="NSvFlags">292</int>
 						<string key="NSFrame">{{101, 198}, {119, 21}}</string>
 						<reference key="NSSuperview" ref="437604028"/>
-						<reference key="NSWindow"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -199,18 +193,18 @@
 						<string key="IBUIText">Адрес</string>
 						<object class="NSColor" key="IBUITextColor">
 							<int key="NSColorSpace">1</int>
-							<bytes key="NSRGB">MC41OTE2OTcyMjU4IDAuMzcyNTk1MDE2MyAwLjAwNjY4NTE5MDY3NAA</bytes>
+							<bytes key="NSRGB">MC42NDU4ODY0Nzk2IDAuMzM5Mzg4NTIwMyAwLjAwMDEyNTExOTI2MjQAA</bytes>
 						</object>
 						<nil key="IBUIHighlightedColor"/>
 						<int key="IBUIBaselineAdjustment">0</int>
 						<int key="IBUITextAlignment">1</int>
 						<object class="IBUIFontDescription" key="IBUIFontDescription">
 							<int key="type">2</int>
-							<double key="pointSize">19</double>
+							<double key="pointSize">18</double>
 						</object>
 						<object class="NSFont" key="IBUIFont">
 							<string key="NSName">Helvetica-Bold</string>
-							<double key="NSSize">19</double>
+							<double key="NSSize">18</double>
 							<int key="NSfFlags">16</int>
 						</object>
 						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
@@ -218,7 +212,6 @@
 				</array>
 				<string key="NSFrameSize">{320, 480}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="112352024"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<object class="NSColor" key="IBUIBackgroundColor">
@@ -359,43 +352,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">18</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">HSAddressPicker</string>
-					<string key="superclassName">UIViewController</string>
-					<dictionary class="NSMutableDictionary" key="actions">
-						<string key="cancelButtonClicked:">id</string>
-						<string key="doneButtonClicked:">id</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="actionInfosByName">
-						<object class="IBActionInfo" key="cancelButtonClicked:">
-							<string key="name">cancelButtonClicked:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="doneButtonClicked:">
-							<string key="name">doneButtonClicked:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</dictionary>
-					<object class="NSMutableDictionary" key="outlets">
-						<string key="NS.key.0">addressTextField</string>
-						<string key="NS.object.0">UITextField</string>
-					</object>
-					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<string key="NS.key.0">addressTextField</string>
-						<object class="IBToOneOutletInfo" key="NS.object.0">
-							<string key="name">addressTextField</string>
-							<string key="candidateClassName">UITextField</string>
-						</object>
-					</object>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/HSAddressPicker.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencies">
